[ci skip] Add v2.0 notice